@@ -1,5 +1,5 @@
 /****************************************************************************
- * include/nuttx/input/djoystick.h
+ * include/nuttx/input/ajoystick.h
  *
  *   Copyright (C) 2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -33,23 +33,22 @@
  *
  ****************************************************************************/
 
-/* This header file provides definition for a standard discrete joystick
- * interface.  A discrete joystick refers to a joystick that could be
- * implemented entirely with GPIO input pins.  So up, down, left, and right
- * are all discrete values like buttons (as opposed to integer values like
- * you might obtain from an analog joystick).
+/* This header file provides definition for a standard analog joystick
+ * interface.  An analog joystick refers to a joystick that provides X/Y
+ * positional data as integer values such as might be provides by DACs.
+ * The analog positional data may be accompanied by discrete button data.
  *
- * The discrete joystick driver exports a standard character driver
- * interface. By convention, the discrete joystick is registered as an input
- * device at /dev/djoyN where N uniquely identifies the driver instance.
+ * The analog joystick driver exports a standard character driver
+ * interface. By convention, the analog joystick is registered as an input
+ * device at /dev/ajoyN where N uniquely identifies the driver instance.
  *
- * This header file documents the generic interface that all NuttX discrete
+ * This header file documents the generic interface that all NuttX analog
  * joystick devices must conform.  It adds standards and conventions on top
  * of the standard character driver interface.
  */
 
-#ifndef __INCLUDE_NUTTX_INPUT_DJOYSTICK_H
-#define __INCLUDE_NUTTX_INPUT_DJOYSTICK_H
+#ifndef __INCLUDE_NUTTX_INPUT_AJOYSTICK_H
+#define __INCLUDE_NUTTX_INPUT_AJOYSTICK_H
 
 /****************************************************************************
  * Included Files
@@ -63,48 +62,45 @@
  ****************************************************************************/
 /* Configuration ************************************************************/
 
-#ifndef CONFIG_DJOYSTICK_NPOLLWAITERS
-#  define CONFIG_DJOYSTICK_NPOLLWAITERS 2
+#ifndef CONFIG_AJOYSTICK_NPOLLWAITERS
+#  define CONFIG_AJOYSTICK_NPOLLWAITERS 2
 #endif
 
 /* Joystick Interface *******************************************************/
 /* These definitions provide the meaning of all of the bits that may be
- * reported in the djoy_buttonset_t bitset.
+ * reported in the ajoy_buttonset_t bitset.
  */
 
-#define DJOY_UP              (0)                  /* Bit 0: Joystick UP */
-#define DJOY_DOWN            (1)                  /* Bit 1: Joystick DOWN */
-#define DJOY_LEFT            (2)                  /* Bit 2: Joystick LEFT */
-#define DJOY_RIGHT           (3)                  /* Bit 3: Joystick RIGHT */
-#define DJOY_BUTTON_1        (4)                  /* Bit 4: Button 1 */
-#define DJOY_BUTTON_2        (5)                  /* Bit 5: Button 2 */
-#define DJOY_BUTTON_3        (6)                  /* Bit 6: Button 3 */
-#define DJOY_BUTTON_4        (7)                  /* Bit 7: Button 4 */
-#define DJOY_NDISCRETES      (8)                  /* Total number of discrete signals */
+#define AJOY_BUTTON(n)       ((n)-1)              /* Bit n-1: Button n, n=1..8 */
+#define AJOY_BUTTON_1        (0)                  /* Bit 0: Button 1 */
+#define AJOY_BUTTON_2        (1)                  /* Bit 1: Button 2 */
+#define AJOY_BUTTON_3        (2)                  /* Bit 2: Button 3 */
+#define AJOY_BUTTON_4        (3)                  /* Bit 3: Button 4 */
+#define AJOY_BUTTON_5        (4)                  /* Bit 4: Button 5 */
+#define AJOY_BUTTON_6        (5)                  /* Bit 5: Button 6 */
+#define AJOY_BUTTON_7        (6)                  /* Bit 6: Button 7 */
+#define AJOY_BUTTON_8        (7)                  /* Bit 7: Button 8 */
+#define AJOY_NBUTTONS        (8)                  /* Total number of buttons */
 
-#define DJOY_UP_BIT          (1 << DJOY_UP)       /* 1:Joystick UP selected */
-#define DJOY_DOWN_BIT        (1 << DJOY_DOWN)     /* 1:Joystick DOWN selected */
-#define DJOY_LEFT_BIT        (1 << DJOY_LEFT)     /* 1:Joystick LEFT selected */
-#define DJOY_RIGHT_BIT       (1 << DJOY_RIGHT)    /* 1:Joystick RIGHT selected */
-#define DJOY_BUTTONS_JOYBITS 0x0f                 /* Set of all joystick directions */
-#define DJOY_BUTTON_1_BIT    (1 << DJOY_BUTTON_1) /* 1:Button 1 pressed */
-#define DJOY_BUTTON_2_BIT    (1 << DJOY_BUTTON_2) /* 1:Button 2 pressed */
-#define DJOY_BUTTON_3_BIT    (1 << DJOY_BUTTON_3) /* 1:Button 3 pressed */
-#define DJOY_BUTTON_4_BIT    (1 << DJOY_BUTTON_4) /* 1:Button 4 pressed */
-#define DJOY_BUTTONS_ALLBITS 0xf0                 /* Set of all buttons */
-#define DJOY_ALLBITS         0xff                 /* Set of all bits */
+#define AJOY_BUTTON_1_BIT    (1 << AJOY_BUTTON_1) /* 1:Button 1 pressed */
+#define AJOY_BUTTON_2_BIT    (1 << AJOY_BUTTON_2) /* 1:Button 2 pressed */
+#define AJOY_BUTTON_3_BIT    (1 << AJOY_BUTTON_3) /* 1:Button 3 pressed */
+#define AJOY_BUTTON_4_BIT    (1 << AJOY_BUTTON_4) /* 1:Button 4 pressed */
+#define AJOY_BUTTON_5_BIT    (1 << AJOY_BUTTON_5) /* 1:Button 5 pressed */
+#define AJOY_BUTTON_6_BIT    (1 << AJOY_BUTTON_6) /* 1:Button 6 pressed */
+#define AJOY_BUTTON_7_BIT    (1 << AJOY_BUTTON_7) /* 1:Button 7 pressed */
+#define AJOY_BUTTON_8_BIT    (1 << AJOY_BUTTON_8) /* 1:Button 8 pressed */
+#define AJOY_BUTTONS_ALL     0xff                 /* Set of all buttons */
 
 /* Typical usage */
 
-#define DJOY_BUTTON_SELECT     DJOY_BUTTON_1
-#define DJOY_BUTTON_FIRE       DJOY_BUTTON_2
-#define DJOY_BUTTON_JUMP       DJOY_BUTTON_3
-#define DJOY_BUTTON_RUN        DJOY_BUTTON_4
+#define AJOY_BUTTON_SELECT     AJOY_BUTTON_1
+#define AJOY_BUTTON_FIRE       AJOY_BUTTON_2
+#define AJOY_BUTTON_JUMP       AJOY_BUTTON_3
 
-#define DJOY_BUTTON_SELECT_BIT DJOY_BUTTON_1_BIT
-#define DJOY_BUTTON_FIRE_BIT   DJOY_BUTTON_2_BIT
-#define DJOY_BUTTON_JUMP_BIT   DJOY_BUTTON_3_BIT
-#define DJOY_BUTTON_RUN_BIT    DJOY_BUTTON_4_BIT
+#define AJOY_BUTTON_SELECT_BIT AJOY_BUTTON_1_BIT
+#define AJOY_BUTTON_FIRE_BIT   AJOY_BUTTON_2_BIT
+#define AJOY_BUTTON_JUMP_BIT   AJOY_BUTTON_3_BIT
 
 /* IOCTL commands
  *
@@ -112,19 +108,19 @@
  * seek() methods.  The remaining driver methods behave as follows:
  *
  * 1) The read() method will always return a single value of size
- *    djoy_buttonset_t represent the current state of the joystick buttons.
- *    read() never blocks.
+ *    struct ajoy_sample_s represent the current joystick positiona and the
+ *    state of all joystick buttons. read() never blocks.
  * 2) The poll() method can be used to notify a client if there is a change
- *    in any of the joystick discrete inputs.  This feature, of course,
+ *    in any of the joystick button inputs.  This feature, of course,
  *    depends upon interrupt GPIO support from the platform.  NOTE: that
  *    semantics of poll() for POLLIN are atypical:  The successful poll
- *    means that the data has changed and has nothing to with the
+ *    means that the button data has changed and has nothing to with the
  *    availability of data to be read; data is always available to be
  *    read.
  * 3) The ioctl() method supports the commands documented below:
  */
 
-/* Command:     DJOYIOC_SUPPORTED
+/* Command:     AJOYIOC_SUPPORTED
  * Description: Report the set of button events supported by the hardware;
  * Argument:    A pointer to writeable integer value in which to return the
  *              set of supported buttons.
@@ -132,77 +128,77 @@
  *              with the errno value set appropriately.
  */
 
-#define DJOYIOC_SUPPORTED  _DJOYIOC(0x0001)
+#define AJOYIOC_SUPPORTED  _AJOYIOC(0x0001)
 
-/* Command:     DJOYIOC_POLLEVENTS
+/* Command:     AJOYIOC_POLLEVENTS
  * Description: Specify the set of button events that can cause a poll()
  *              to awaken.  The default is all button depressions and all
  *              button releases (all supported buttons);
- * Argument:    A read-only pointer to an instance of struct djoy_pollevents_s
+ * Argument:    A read-only pointer to an instance of struct ajoy_pollevents_s
  * Return:      Zero (OK) on success.  Minus one will be returned on failure
  *              with the errno value set appropriately.
  */
 
-#define DJOYIOC_POLLEVENTS  _DJOYIOC(0x0002)
+#define AJOYIOC_POLLEVENTS  _AJOYIOC(0x0002)
 
-/* Command:     DJOYIOC_REGISTER
+/* Command:     AJOYIOC_REGISTER
  * Description: Register to receive a signal whenever there is a change in
- *              any of the joystick discrete inputs.  This feature, of
+ *              any of the joystick analog inputs.  This feature, of
  *              course, depends upon interrupt GPIO support from the
  *              platform.
- * Argument:    A read-only pointer to an instance of struct djoy_notify_s
+ * Argument:    A read-only pointer to an instance of struct ajoy_notify_s
  * Return:      Zero (OK) on success.  Minus one will be returned on failure
  *              with the errno value set appropriately.
  */
 
-#define DJOYIOC_REGISTER   _DJOYIOC(0x0003)
+#define AJOYIOC_REGISTER   _AJOYIOC(0x0003)
 
 /****************************************************************************
  * Public Types
  ****************************************************************************/
-/* This type is a bit set that contains the state of all discrete joystick
+/* This type is a bit set that contains the state of all analog joystick
  * buttons.
  */
 
-typedef uint8_t djoy_buttonset_t;
+typedef uint8_t ajoy_buttonset_t;
 
-/* A reference to this structure is provided with the DJOYIOC_POLLEVENTS IOCTL
+/* A reference to this structure is provided with the AJOYIOC_POLLEVENTS IOCTL
  * command and describes the conditions under which the client would like
  * to receive notification.
  */
 
-struct djoy_pollevents_s
+struct ajoy_pollevents_s
 {
-  djoy_buttonset_t dp_press;   /* Set of button depressions to wake up the poll */
-  djoy_buttonset_t dp_release; /* Set of button releases to wake up the poll */
+  ajoy_buttonset_t ap_press;   /* Set of button depressions to wake up the poll */
+  ajoy_buttonset_t ap_release; /* Set of button releases to wake up the poll */
 };
 
-/* A reference to this structure is provided with the DJOYIOC_REGISTER IOCTL
+/* A reference to this structure is provided with the AJOYIOC_REGISTER IOCTL
  * command and describes the conditions under which the client would like
  * to receive notification.
  */
 
-struct djoy_notify_s
+struct ajoy_notify_s
 {
-  djoy_buttonset_t dn_press;   /* Set of button depressions to be notified */
-  djoy_buttonset_t dn_release; /* Set of button releases to be notified */
-  uint8_t          dn_signo;   /* Signal number to use in the notification */
+  ajoy_buttonset_t an_press;   /* Set of button depressions to be notified */
+  ajoy_buttonset_t an_release; /* Set of button releases to be notified */
+  uint8_t          an_signo;   /* Signal number to use in the notification */
 };
 
-/* This is the type of the discrete joystick interrupt handler used with
- * the struct djoy_lowerhalf_s enable() method.
+/* This is the type of the analog joystick interrupt handler used with
+ * the struct ajoy_lowerhalf_s enable() method.
  */
 
-struct djoy_lowerhalf_s;
-typedef CODE void (*djoy_interrupt_t)
-  (FAR const struct djoy_lowerhalf_s *lower, FAR void *arg);
+struct ajoy_lowerhalf_s;
+typedef CODE void (*ajoy_handler_t)
+  (FAR const struct ajoy_lowerhalf_s *lower, FAR void *arg);
 
-/* The discrete joystick driver is a two-part driver:
+/* The analog joystick driver is a two-part driver:
  *
  * 1) A common upper half driver that provides the common user interface to
  *    the joystick,
  * 2) Platform-specific lower half drivers that provide the interface
- *    between the common upper half and the platform discrete inputs.
+ *    between the common upper half and the platform analog inputs.
  *
  * This structure defines the interface between an instance of the lower
  * half driver and the common upper half driver.  Such an instance is
@@ -210,23 +206,23 @@ typedef CODE void (*djoy_interrupt_t)
  * the upper and lower halves into one driver.
  */
 
-struct djoy_lowerhalf_s
+struct ajoy_lowerhalf_s
 {
-  /* Return the set of buttons supported on the discrete joystick device */
+  /* Return the set of buttons supported on the analog joystick device */
 
-  CODE djoy_buttonset_t (*dl_supported)(FAR const struct djoy_lowerhalf_s *lower);
+  CODE ajoy_buttonset_t (*dl_supported)(FAR const struct ajoy_lowerhalf_s *lower);
 
-  /* Return the current state of all discrete joystick buttons */
+  /* Return the current state of all analog joystick buttons */
 
-  CODE djoy_buttonset_t (*dl_sample)(FAR const struct djoy_lowerhalf_s *lower);
+  CODE ajoy_buttonset_t (*dl_sample)(FAR const struct ajoy_lowerhalf_s *lower);
 
-  /* Enable interrupts on the selected set of joystick buttons.  And empty
+  /* Enable interrupts on the selecte set of joystick buttons.  And empty
    * set will disable all interrupts.
    */
 
-  CODE void (*dl_enable)(FAR const struct djoy_lowerhalf_s *lower,
-                         djoy_buttonset_t press, djoy_buttonset_t release,
-                         djoy_interrupt_t handler, FAR void *arg);
+  CODE void (*dl_enable)(FAR const struct ajoy_lowerhalf_s *lower,
+                         ajoy_buttonset_t press, ajoy_buttonset_t release,
+                         ajoy_handler_t handler, FAR void *arg);
 };
 
 /****************************************************************************
@@ -246,18 +242,18 @@ extern "C"
  ****************************************************************************/
 
 /****************************************************************************
- * Name: djoy_register
+ * Name: ajoy_register
  *
  * Description:
- *   Bind the lower half discrete joystick driver to an instance of the
- *   upper half discrete joystick driver and register the composite character
- *   driver as the specified device.
+ *   Bind the lower half analog joystick driver to an instance of the
+ *   upper half analog joystick driver and register the composite character
+ *   driver as the specific device.
  *
  * Input Parameters:
- *   devname - The name of the discrete joystick device to be registers.
- *     This should be a string of the form "/dev/djoyN" where N is the the
+ *   devname - The name of the analog joystick device to be registers.
+ *     This should be a string of the form "/dev/ajoyN" where N is the the
  *     minor device number.
- *   lower - An instance of the platform-specific discrete joystick lower
+ *   lower - An instance of the platform-specific analog joystick lower
  *     half driver.
  *
  * Returned Values:
@@ -266,12 +262,12 @@ extern "C"
  *
  ****************************************************************************/
 
-int djoy_register(FAR const char *devname,
-                  FAR const struct djoy_lowerhalf_s *lower);
+int ajoy_register(FAR const char *devname,
+                  FAR const struct ajoy_lowerhalf_s *lower);
 
 #undef EXTERN
 #ifdef __cplusplus
 }
 #endif
 
-#endif /* __INCLUDE_NUTTX_INPUT_DJOYSTICK_H */
+#endif /* __INCLUDE_NUTTX_INPUT_AJOYSTICK_H */
